# photolive-obs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  COMPARISON.md  CONTROL_UI_FIXES.md  EXECUTABLE_GUIDE.md  LOGGING_IMPROVEMENTS.md  PLUGIN_DEV.md  PLUGIN_INSTALL.md  PLUGIN_SUMMARY.md  README.md  REFACTOR.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  REFACTOR_SUMMARY.md  SECURITY.md  biome.json  build.bat  build.sh  compose.yaml  copilot-instructions.md  createImages.js  create_test_images.py  create_test_images_long_names.py  eslint.config.js  jest.config.js  main.js  migrate.js  package.json  pkg.config.json  pnpm-lock.yaml  preload.js  server-new.js  server.js  server.js.backup  start.bat  start.ps1  start.sh  (+8 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: electron-builder.yml  package.json  tsconfig.build.json  tsconfig.json
apps/server/: drizzle.config.ts  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/web-control/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web-slideshow/: index.html  package.json  vite.config.ts
config/: default.json
data/locale/: en-US.ini  fr-FR.ini
docker/: Dockerfile
locales/: en.json  fr.json
packaging/: nfpm.yaml  photolive-launcher  photolive.desktop  photolive.env.example
photos/: README.md  test1.txt  test2.txt  test_image_3.txt
public/: control.html  slideshow.html
public/css/: control.css  slideshow.css
public/js/: control-new.js  control.js  i18n.js  slideshow.js
src/: app.js  node-server.cpp  node-server.h  photolive-config.cpp  photolive-config.h  photolive-source.cpp  photolive-source.h  plugin-main.cpp  plugin-main.h
src/config/: index.js
src/controllers/: apiController.js  photoController.js  uploadController.js
src/middleware/: cors.js  errorHandler.js  requestLogger.js  security.js
src/routes/: api.js  images.js
src/services/: fileWatcher.js  fileWatcherService.js  ftpService.js  imageService.js  slideshowService.js  (+2 more)
watermarks/: README.md
(+106 files in other folders)
